--- a/cancer_predict.ipynb
+++ b/cancer_predict.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "824a936b",
+   "id": "64fa5f25",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed45f1cd",
+   "id": "59c459f0",
    "metadata": {},
    "source": [
     "The result show that there is no null value in the data frame. \n",
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4507c86f",
+   "id": "1ed112ac",
    "metadata": {},
    "source": [
     "It seems like column \"Level\" contain Categorical value, Let's check it out."
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f2f5025",
+   "id": "422df73a",
    "metadata": {},
    "source": [
     "Let's check the column \"Level\" again to see how it is now."
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2eb074f1",
+   "id": "a4a29cd1",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a074b616",
+   "id": "52c38790",
    "metadata": {},
    "source": [
     "Great! Now let's Explore our data and find some insights hidden in it."
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811db39e",
+   "id": "45983678",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17c2968",
+   "id": "d0f863f6",
    "metadata": {},
    "source": [
     "As the heat map showing, those features from Air polution to Coughing of Blood are the most effect with level of lung cancer.\n",
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bac80489",
+   "id": "74443621",
    "metadata": {},
    "source": [
     "The map is showing that the most positively correlated features which is displayed at the top is Coughing of Blood. "
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47aff64d",
+   "id": "3d8997ba",
    "metadata": {},
    "source": [
     "Let's take one more check about the Age relation with the level."
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "7d85e8d3",
+   "id": "d5f466b4",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5a8fb4",
+   "id": "0a209eaa",
    "metadata": {},
    "source": [
     "## Feature Engineering"
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0837ec7",
+   "id": "e0b22a6e",
    "metadata": {},
    "source": [
     "with the seaborn heatmap, we could determine the most effective features are below:\n",
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4caedfc6",
+   "id": "4e3c0fd0",
    "metadata": {},
    "source": [
     "Let keep those features and drop others and then building models."
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37c2f20e",
+   "id": "0fde3d0d",
    "metadata": {},
    "source": [
     "\n",
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "691acd5a",
+   "id": "1039ae3b",
    "metadata": {},
    "source": [
     "Now lets divide our datasets into train and test data"
@@ -2001,21 +2001,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9cc8463",
+   "id": "f32c48ed",
    "metadata": {},
    "source": [
     "## Conclusions\n",
     "\n",
-    "As we can see out of the eight different models, two models really performed so well that they gave and accuruacy of  100\n",
-    " %. Still the gold medal of this notebook goes to  KNeighborasClassifier and the silver and bronze are SVC and Random Forest Classifer with a little longer time trained. The lineup is backed by Suport Vector Machines with an accuracy of almost  99.59\n",
-    " %. \n",
-    "  In the line we have GaussianNB with 93.49% but the time trained consumming is very impressive 0.001990 second!"
+    "Among the six different models, three exhibited exceptional performance with 100% accuracy. The top performer in this notebook is the KNeighborsClassifier, closely followed by the SVC and Random Forest Classifier, although the latter two required slightly longer training times. The Decision Tree Classifier also delivered a strong accuracy of approximately 99.59% in just 0.003018 seconds.\n",
+    "\n",
+    "On the other hand, the GaussianNB model achieved an accuracy of 93.49%, which is respectable, and it did so in an impressively short training time of only 0.001990 seconds."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c4ed4c4",
+   "id": "03016a0d",
    "metadata": {},
    "outputs": [],
    "source": []
